# yolo-openai-detector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  api-contract.md  limitations.md  non-goals.md  runbook.md  work-orders.md
scripts/: README.md  export_model.py
src/app/: __init__.py  auth.py  config.py  dependencies.py  errors.py  logging_config.py  main.py  service.py
src/app/api/: __init__.py  chat_completions.py  detections.py  models_route.py
src/app/imaging/: __init__.py  decode.py
src/app/inference/: __init__.py  engine.py  labels.py  postprocess.py  preprocess.py
src/app/schemas/: __init__.py  detections.py  openai.py
tests/: conftest.py  test_auth.py  test_chat_completions.py  test_detections.py  test_imaging.py  test_inference.py  test_logging.py
tests/fixtures/: README.md
