[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-vision-gateway"
version = "0.1.0"
description = "CPU-only, OpenAI-compatible YOLO object-detection gateway (single fixed API key, stateless)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Boštjan" }]

# Runtime dependencies (serving path only — NO training framework, NO GPU).
# Version floors are conservative; the execution agent must pin exact versions in PR-0.
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "onnxruntime==1.27.0",
    "numpy==2.4.6",
    "pillow==12.2.0",
]

[project.optional-dependencies]
# Dev/test tooling.
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "ruff==0.15.20",
    "openai==2.44.0",         # used only for the SDK-compatibility integration test
]
# Model export tooling — used OFFLINE to produce the ONNX model.
# These must NOT be imported by the serving path.
export = [
    "ultralytics>=8.2",
    "onnx>=1.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: real-model tests — skip locally when MODEL_PATH is absent, run in CI",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# Depends() is FastAPI's standard DI marker — safe as a default argument.
extend-immutable-calls = ["Depends", "fastapi.Depends"]
